k8s/infra/dev/mongo/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: smartcity
  labels:
    app: mongodb
    component: database
    environment: development
spec:
  type: ClusterIP
  ports:
  - name: mongodb
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongodb
    component: database
