k8s/infra/dev/mongo/mongodb-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-metrics
  namespace: smartcity
  labels:
    app: mongodb
    component: metrics
    environment: development
spec:
  type: ClusterIP
  ports:
  - name: metrics
    port: 9216
    protocol: TCP
    targetPort: 9216
  selector:
    app: mongodb
    component: database
